force-app/main/default/objects/Ordem_de_Servi_o__c/Ordem_de_Servi_o__c.object-meta.xml
<CustomObject>
    <label>Ordem de Serviço</label>
    <nameField>
        <displayFormat>O.S - {0000000000}</displayFormat>
        <label>Nº da Ordem de Serviço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ordens de Serviço</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>