force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Campo_para_PDF_OS_ABERTURA__c.field-meta.xml
<CustomField>
    <fullName>Campo_para_PDF_OS_ABERTURA__c</fullName>
    <formula>Data_da_Cria_o_da_O_S__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campo para PDF (OS ABERTURA)</label>
    <type>DateTime</type>
</CustomField>