force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Data_de_Retorno_do_Equipamento_no_EAS__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Retorno_do_Equipamento_no_EAS__c</fullName>
    <label>Data de Retorno do Equipamento no E.A.S</label>
    <type>Date</type>
</CustomField>