force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Data_e_Hora_do_Fechamento_da_O_S__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_do_Fechamento_da_O_S__c</fullName>
    <label>Data e Hora do Fechamento da O.S</label>
    <type>DateTime</type>
</CustomField>