force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Data_e_Hora_do_Servi_o_T__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_do_Servi_o_T__c</fullName>
    <description>Data e hora do fim do Serviço</description>
    <label>Data e Hora do Serviço ( T )</label>
    <type>DateTime</type>
</CustomField>