force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Data_e_Hora_do_Servico_I__c.field-meta.xml
<CustomField>
    <fullName>Data_e_Hora_do_Servico_I__c</fullName>
    <description>Data e Hora de início do Serviço</description>
    <label>Data e Hora do Serviço ( I )</label>
    <type>DateTime</type>
</CustomField>