force-app/main/default/objects/Ordem_de_Servi_o__c/fields/E_A_S__c.field-meta.xml
<CustomField>
    <fullName>E_A_S__c</fullName>
    <formula>N_do_Chamado_Relacionado__r.E_A_S__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>E.A.S</label>
    <type>Text</type>
</CustomField>