force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Endere_o__c.field-meta.xml
<CustomField>
    <fullName>Endere_o__c</fullName>
    <formula>N_do_Chamado_Relacionado__r.E_A_S__r.BillingStreet    + &quot;, &quot; +   N_do_Chamado_Relacionado__r.E_A_S__r.BillingCity   + &quot;, &quot; +   N_do_Chamado_Relacionado__r.E_A_S__r.BillingState  + &quot;, CEP: &quot; +   N_do_Chamado_Relacionado__r.E_A_S__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Endereço</label>
    <type>Text</type>
</CustomField>