force-app/main/default/objects/Ordem_de_Servi_o__c/fields/ID_TAG__c.field-meta.xml
<CustomField>
    <fullName>ID_TAG__c</fullName>
    <formula>N_do_Chamado_Relacionado__r.ID_Tag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID / Tag</label>
    <type>Text</type>
</CustomField>