force-app/main/default/objects/Ordem_de_Servi_o__c/fields/N_de_S_rie__c.field-meta.xml
<CustomField>
    <fullName>N_de_S_rie__c</fullName>
    <formula>N_do_Chamado_Relacionado__r.N_mero_de_S_rie__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nº de Série</label>
    <type>Text</type>
</CustomField>