force-app/main/default/objects/Ordem_de_Servi_o__c/fields/N_do_Chamado_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>N_do_Chamado_Relacionado__c</fullName>
    <label>Nº do Chamado Relacionado</label>
    <referenceTo>Chamdo__c</referenceTo>
    <relationshipLabel>Ordens de Serviço</relationshipLabel>
    <relationshipName>Ordens_de_Servi_o</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>