force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Setor_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Setor_do_Equipamento__c</fullName>
    <formula>N_do_Chamado_Relacionado__r.Setor_do_Equipamento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setor do Equipamento</label>
    <type>Text</type>
</CustomField>