force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Status_da_O_S__c.field-meta.xml
<CustomField>
    <fullName>Status_da_O_S__c</fullName>
    <label>Status da O.S</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGUARDANDO APROVAÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO MANUTENÇÃO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO ORÇAMENTO</fullName>
            </value>
            <value>
                <fullName>AGUARDANDO PEÇA</fullName>
            </value>
            <value>
                <fullName>EM ANDAMENTO</fullName>
            </value>
            <value>
                <fullName>EM MANUTENÇÃO</fullName>
            </value>
            <value>
                <fullName>FECHADA E CONCLUÍDA</fullName>
            </value>
            <value>
                <fullName>CANCELADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>