force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Status_do_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Status_do_Equipamento__c</fullName>
    <label>Status do Equipamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EM ATENDIMENTO</fullName>
            </value>
            <value>
                <fullName>DESATIVADO</fullName>
            </value>
            <value>
                <fullName>OPERACIONAL</fullName>
            </value>
            <value>
                <fullName>INOPERANTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>