force-app/main/default/objects/Ordem_de_Servi_o__c/fields/Valor_do_Servi_o__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Servi_o__c</fullName>
    <label>Valor do Serviço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>