force-app/main/default/objects/Ordem_de_Servi_o__c/validationRules/DATA_E_HORA_DE_FECHAMENTO.validationRule-meta.xml
<ValidationRule>
    <fullName>DATA_E_HORA_DE_FECHAMENTO</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Data_e_Hora_do_Fechamento_da_O_S__c ) &amp;&amp; OR(ISPICKVAL( Status_da_O_S__c ,&quot;FECHADA E CONCLUÍDA&quot; ),ISPICKVAL( Status_da_O_S__c ,&quot;FECHADA E NÃO CONCLUÍDA&quot; ))</errorConditionFormula>
    <errorDisplayField>Data_e_Hora_do_Fechamento_da_O_S__c</errorDisplayField>
    <errorMessage>A DATA DE FECHAMENTO NÃO PODE ESTAR EM BRANCO SE O STATUS FOR IGUAL A FECHADO</errorMessage>
</ValidationRule>