force-app/main/default/objects/Ordem_de_Servi_o__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>Equipamento__c</columns>
    <columns>ID_TAG__c</columns>
    <columns>Local_do_Servico__c</columns>
    <columns>Prioridade__c</columns>
    <columns>Status_da_O_S__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>