force-app/main/default/objects/Ordem_de_Servi_o__c/listViews/O_S_s_Abertas.listView-meta.xml
<ListView>
    <fullName>O_S_s_Abertas</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Assunto__c</columns>
    <columns>Equipamento__c</columns>
    <columns>ID_TAG__c</columns>
    <columns>Setor_do_Equipamento__c</columns>
    <columns>Status_da_O_S__c</columns>
    <columns>Prioridade__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_da_O_S__c</field>
        <operation>notEqual</operation>
        <value>FECHADA E CONCLUÍDA</value>
    </filters>
    <filters>
        <field>Status_da_O_S__c</field>
        <operation>notEqual</operation>
        <value>CANCELADA</value>
    </filters>
    <label>O.S&apos;s Abertas</label>
    <sharedTo>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>